--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
-<!DOCTYPE html>
-<html>
-    <Body>
-          <H1>My First Project</H1> "this is my header"
-         <p>My first paragraph</p> "this is my paragraph"
-    </Body>
+
+<!doctype html>
+
+<!-- this is a comment for human! -->
+
+<html lang="en">
+
+  <header>
+      <title>Adam Gomez's Portal</title>
+      <link rel="stylesheet" href="css/master.css">
+      <link rel="FaviconIcon" href="favico.ico" type="image/x-icon">
+      <link rel="shortcut" href="favicon.ico" type="image/x-icon">
+      <meta name="viewpoint" content="width=device-width, intitial-scale=1, shrink-to-fit=no">
+      <meta name="name" content="Adam Gomez's Portal">
+      <meta name="robots" content="noindex, nofollow">
+  </header>
+  <body>
+    <img src= "images.jpg" width="75%" alt="banner">
+    <h1>Adam Gomez's Portal</h1>
+    <h2>About Me</h2>
+    <p>I am a single father and student in NYC</p>
+    <p>I studied Psychology & The Liberal Arts in CUNY Bronx Community College</p>
+    <p>I also studied Psychology & The Liberal Arts in CUNY City College</p>
+    Credentials and Portfolio
+
+    <p><a href="resume.html">My Resume</a> | <a href="https://github.com/AGZ2789">My GitHub</a></P>
+    <h2>Contact</h2>
+
+    <p>Email: <a href="mailto:agz840@gmail.com">agz840@gmail.com</a></p>
+  </body>
+
+  <footer>
+    <hr></hr>
+    <code>Copyright (C) 2021 Adam Gomez</code>
+  </footer>
+
 </html>
