--- a/Website-Resume.html
+++ b/Website-Resume.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 
 <!-- this is a comment for human! -->
@@ -15,18 +14,18 @@
       <meta name="robots" content="noindex, nofollow">
   </header>
   <body>
-    <img src= "images.jpg" width="75%" alt="banner">
+    <img src= "image.jpg">
     <h1>Adam Gomez's Portal</h1>
     <h2>About Me</h2>
     <p>I am a single father and student in NYC</p>
     <p>I studied Psychology & The Liberal Arts in CUNY Bronx Community College</p>
     <p>I also studied Psychology & The Liberal Arts in CUNY City College</p>
-    Credentials and Portfolio
-
-    <p><a href="resume.html">My Resume</a> | <a href="https://github.com/AGZ2789">My GitHub</a></P>
-    <h2>Contact</h2>
-
-    <p>Email: <a href="mailto:agz840@gmail.com">agz840@gmail.com</a></p>
+    <h2>Credentials and Portfolio</h2>
+    <a href="https://docs.google.com/document/d/e/2PACX-1vQYZ4r-eAiIM33NnAJJWgBd3xU-_-kLPvlVDtwKzQa-4YxmZHqhIcGMZuYxd_HAFXDOY8rjywS2QaNP/pub"></a> 
+    <a href="https://docs.google.com/document/d/e/2PACX-1vQYZ4r-eAiIM33NnAJJWgBd3xU-_-kLPvlVDtwKzQa-4YxmZHqhIcGMZuYxd_HAFXDOY8rjywS2QaNP/pub">My Resume</a> | <a href="https://github.com/AGZ2789">My GitHub</a>
+    <p><a "https://github.com/AGZ2789/AGZ2789.github.io/blob/main/blog.html"></a></p>
+      
+    <p>Email: <a href="malito=agz840@gmail.com">agz840@gmail.com</a></p>
   </body>
 
   <footer>
